# FIRM-Client

./: .gitignore  Cargo.toml  README.md  compile.ps1  compile.sh  eslint.config.js  firm_client.pyi  package-lock.json  package.json  pyproject.toml  test.html
.github/workflows/: python-tests.yml  rust-clippy.yml  rust-fmt.yml  rust-unit-tests.yml
examples/python/: test.py
examples/rust/: main.rs
examples/web/: test.html
firm_core/: Cargo.toml
firm_core/src/: calibration.rs  client_packets.rs  command_builder.rs  command_handler.rs  commands.rs  constants.rs  data_parser.rs  firm_packet.rs  firm_packets.rs  framed_packet.rs  lib.rs  log_parsing.rs  mock.rs  parser.rs  utils.rs
firm_py/: Cargo.toml  firm_client.pyi
firm_py/examples/: run_parser.py
firm_py/src/: lib.rs
firm_python/: Cargo.toml  firm_client.pyi
firm_python/examples/: run_commands.py  run_laptop_mag_calibration.py  run_magnetometer_calibration.py  run_mock_and_log.py  run_mock_stream.py  run_parser.py  run_plot_live_data.py  run_set_calibration.py
firm_python/src/: lib.rs
firm_rust/: Cargo.toml
firm_rust/examples/: calibrate_mag_csv_range.rs  run_mock_print_bytes.rs  simple_reader.rs  test_calibration.rs  verify_mock_packets.rs
firm_rust/src/: lib.rs  mock_serial.rs
firm_typescript/: Cargo.toml  eslint.config.js  package-lock.json  package.json
firm_typescript/examples/: test.html  verify_pack.js
firm_typescript/src/: lib.rs
firm_typescript/typescript/: tsconfig.json
firm_typescript/typescript/src/: FIRM.ts  index.ts  types.ts
firm_wasm/: Cargo.toml
firm_wasm/src/: lib.rs
firm_wasm/web/: test.html
python/firm_client/: __init__.py  firm.py  firm_client.pyi  wapper.py
scripts/: plot_capture_csv.py
src/: command_sender.rs  crc.rs  data_parser.rs  js_lib.rs  lib.rs  main.rs  parser.rs  py_lib.rs
tests/: test_firm_data_packet.py  test_set_device_config.py
ts/: FirmSerial.ts  tsconfig.json
ts/src/: FIRM.ts  FirmSerial.ts  index.ts
typescript/src/: index.ts
web_demo/: README.md  app.js  index.html
