[package]
name = "firm-client"
version = "0.1.0"
edition = "2024"

[dependencies]
serialport = "4.8.1"
serde = { version = "1.0", features = ["derive"] }

wasm-bindgen = { version = "0.2", optional = true }
serde-wasm-bindgen = { version = "0.5", optional = true }
pyo3 = { version = "0.27.1", optional = true }

[features]
wasm = ["wasm-bindgen", "serde-wasm-bindgen"]
python = ["pyo3"]

default = ["python"]

[[bin]]
name = "firm_cli"
path = "src/main.rs"

[lib]
name = "firm_client"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[tool.maturin]
features = ["python"]
