[package]
name = "firm-client"
version = "0.1.0"
edition = "2024"

[dependencies]
serialport = { version = "4.8.1", optional = true }

serde = { version = "1.0", features = ["derive"] }

wasm-bindgen = { version = "0.2", optional = true }
serde-wasm-bindgen = { version = "0.5", optional = true }

pyo3 = { version = "0.22", features = [
    "extension-module",
    "abi3-py39",
], optional = true }

[features]
default = ["native"]

native = ["serialport"]

wasm = ["wasm-bindgen", "serde-wasm-bindgen"]

python = ["pyo3"]

[[bin]]
name = "firm_cli"
path = "examples/rust/main.rs"

[lib]
name = "firm_client"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]
