[package]
name = "firm_core"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive"] }
pyo3 = { version = "0.27.2", optional = true }
wasm-bindgen = { version = "0.2.106", optional = true }

[features]
default = []
python = ["dep:pyo3"]
wasm = ["dep:wasm-bindgen"]
