[package]
name = "firm_typescript"
version = "1.1.3"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
firm_core = { path = "../firm_core" }
wasm-bindgen = "0.2.106"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
js-sys = "0.3.77"

[features]
default = ["wasm"]
wasm = ["firm_core/wasm"]